Completee styling for Snapchat case study, lay foundation for case study styling, modify sidebar for case study pages, remove js until all pages are completed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				<a class="line" href="#portfolio"></a>
 			</div>
-			<div class="sidebar">
+			<div class="sidebar sidebar-active">
 				<a href="#contact">CONTACT</a><a href="#skills">SKILLS</a><a href="#about">ABOUT</a><a href="#portfolio">PORTFOLIO</a>
 			</div>
 			<div id="portfolio">
@@ -68,7 +68,7 @@
 					</a>
 				</div>
 				<div class="card">
-					<a href="javascript:;">
+					<a href="/snapchat.html">
 						<img src="images/portfolio/yellowfilters.jpg" alt="Snapchat Filters">
 						<div class="portfolio-caption">
 							<h1>Snapchat</h1>
@@ -167,6 +167,9 @@
 					<a href="https://www.behance.net/joshua-isaiah" target="_blank">BEHANCE</a><a href="https://www.facebook.com/joshrodriguez17" target="_blank"><img src="images/fb-logo-blk.svg" alt="Joshua Isaiah's Facebook"></a><a href="https://www.linkedin.com/in/joshuaisaiah" target="_blank"><img src="images/li-logo-blk.svg" alt="Joshua Isaiah's LinkedIn"></a><a href="https://www.github.com/joshrod" target="_blank">GITHUB</a>
 				</div>
 			</div>
+			<!-- UNCOMMENT WHEN DONE WITH ALL WEBPAGES
+			<script src="js/smoothscroll.js"></script>
 			<script src="js/script.js"></script>
+			-->
 		</body>
 	</html>
