First working MVP of website redesign.

--- a/snapchat.html
+++ b/snapchat.html
@@ -4,27 +4,28 @@
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 			<title>Snapchat | Joshua Isaiah Rodriguez</title>
-			<meta name="description" content="Joshua Isaiah Rodriguez is a front-end web developer with a graphic design background currently based in San Antonio, Texas.">
+			<meta name="description" content="Joshua Isaiah Rodriguez is a front-end web developer with a graphic design background.">
 			<meta name="author" content="Joshua Isaiah Rodriguez">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<!--[if IE]><link rel="shortcut icon" href="images/favicons/favicon-32.ico"><![endif]-->
 			<link rel="icon" href="images/favicons/favicon.png" type="image/x-icon" />
 			<link rel="canonical" href="http://joshuaisaiah.com"/>
 			<link type="text/css" rel="stylesheet" href="css/main.css" />
-			<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,800" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,800" rel="stylesheet">
 		</head>
 		<body>
-			<div class="snapchat-intro">
+			<div class="snapchat cs-hero">
 				<h1 class="cs-title">Snapchat</h1>
-				<div class="snap-pics">
+				<div class="intro-pics">
 					<img src="images/snapchat/sa-s8.png" alt="San Antonio Geofilter" srcset="images/snapchat/sa-s8@2x.png 2x">
 					<img src="images/snapchat/ln-s8.png" alt="Latin Night Geofilter" srcset="images/snapchat/ln-s8@2x.png 2x">
 				</div>
 			</div>
-			<div class="cs-sidebar sidebar-active">
-				<a href="/index.html">BACK TO MAIN</a>
+			<div class="cs-sidebar">
+				<a href="/index.html#portfolio">BACK TO MAIN</a>
 			</div>
 			<div class="cs-container">
+				<div class="cs-back"><a href="/index.html#portfolio">< BACK</a></div>
 				<h1 class="mobile-title">Snapchat</h1>
 				<div class="cs-fw">
 					<h3 class="cs-heading">Overview</h3>
@@ -33,7 +34,7 @@
 				<div class="snap-filter">
 					<img src="images/snapchat/sa-filter.png" alt="Latin Night Geofilter" srcset="images/snapchat/sa-filter@2x.png">
 					<div class="snap-desc">
-						<p>At the time I created my San Antonio filter, I didn't see a lot of other geofilters that included the two most recognizable landmarks of the city, in my opinion: the Alamo and the Hemisfair Tower. If they were included, they were only silhouettes in a skyline. I wanted to represent them in all their glory.</p>
+						<p>At the time I created my San Antonio filter, I didn't see a lot of other geofilters that included the two most recognizable landmarks of the city, in my opinion: the Alamo and the Hemisfair Tower. If they were included, they were only silhouettes in a skyline, and I wanted to represent them in all their glory together. The following stats are from December 2017:</p>
 						<div class="snap-stats">
 							<ul class="stat-titles">
 								<li>Uses</li>
@@ -49,7 +50,7 @@
 				<div class="snap-filter">
 					<img src="images/snapchat/ln-filter.png" alt="Latin Night Filter" srcset="images/snapchat/ln-filter@2x.png">
 					<div class="snap-desc">
-						<p>As for the Latin Night filter, it was done as part of a social media campaign to promote Blue Velvet Lounge's event every Thursday. It was aimed to enhance the experience of the customers that attended the event and the pictures they were taking on Snapchat so that their friends could get exposed to the business through their Story.</p>
+						<p>As for the Latin Night filter, it was done as part of a social media campaign to promote Blue Velvet Lounge's event every Thursday. When I think of a Latin-themed event, I think of a tropical setting, which is the basis of this design. In order to promote effectively on Snapchat, the geofilter had to be attractive enough for patrons to use it in their pictures. I made a different one every week, but this one was the most effective geofilter.</p>
 						<div class="snap-stats">
 							<ul class="stat-titles">
 								<li>Swipes</li>
@@ -68,36 +69,33 @@
 				</div>
 				<div class="cs-fw">
 					<h3 class="cs-heading">Epilogue</h3>
-					<p>The San Antonio filter was submitted in November 2016 and spproved two weeks later. I didn't start seeing it until January, but it could've been up longer and I just didn't notice. So far, it's been used over 275K times and seen over 12 million times. I never thought anything I created would reach this high of a scope. It's gratifying, and I hope more work reaches these numbers again.<br><br>
-					The Latin Night filter was submitted for a one-night use, running from 9pm - 2am for the event. For the low amount of $5, almost 6K people were exposed to the business and the event, with a decent use rate to boot. This part of the social media campaign proved successful, showing that Snapchat geofilters are a viable opportunity for marketing if used correctly.</p>
+					<p>The San Antonio filter was submitted in November 2016 and approved two weeks later. I didn't start seeing it until January, but it could've been up longer and I just didn't notice. Seeing something I created being used in other people's Stories around the city felt gratifying. Having that amount of people interacting with my design is something I want to keep experiencing in the future.<br><br>
+					The Latin Night filter was submitted for a one-night use, running from 9pm - 2am for the lounge event. For a lounge that holds a maximum of 160 people at one time, the statistics were higher than expected. The geofilter combined with marketing on Facebook saw about a 15% increase in the following week's Latin Night. Because of the positive feedback, having a geofilter became a trend for both the business and patrons to enjoy.</p>
 				</div>
 				<div class="more-projects">
 					<h3 class="cs-heading">More Projects</h3>
 					<div class="card">
-						<a href="javascript:;">
+						<a href="/cycle.html">
 							<img src="images/portfolio/cycle-main.jpg" alt="Cycle De Mayo">
 							<div class="portfolio-caption">
 								<h1>Cycle De Mayo</h1>
 								<h3>Social Media Marketing</h3>
-								<p>Click here to see case study</p>
+								<p>Click to see case study</p>
 							</div>
 						</a>
 					</div>
 					<div class="card">
-						<a href="javascript:;">
+						<a href="/madisondrinks.html">
 							<img src="images/portfolio/appmock.png" alt="MadisonDrinks">
 							<div class="portfolio-caption">
 								<h1>MadisonDrinks</h1>
 								<h3>UI Design / Android Dev</h3>
-								<p>Click here to see case study</p>
+								<p>Click to see case study</p>
 							</div>
 						</a>
 					</div>
 				</div>				
 			</div>
-			<!-- UNCOMMENT WHEN DONE WITH ALL WEBPAGES
-			<script src="js/smoothscroll.js"></script>
-			<script src="js/script.js"></script>
-			-->
+			<script src="js/cases.js"></script>
 		</body>
 	</html>
