--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 			<title>Joshua Isaiah Rodriguez | Front-End Web Developer</title>
-			<meta name="description" content="Joshua Isaiah Rodriguez is a front-end web developer with a graphic design background currently based in San Antonio, Texas.">
+			<meta name="description" content="Joshua Isaiah Rodriguez is a front-end web developer with a graphic design background.">
 			<meta name="author" content="Joshua Isaiah Rodriguez">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<!--[if IE]><link rel="shortcut icon" href="images/favicons/favicon-32.ico"><![endif]-->
@@ -21,12 +21,15 @@
 						<span></span>
 						<span></span>
 				</div>
-				<nav class="mobile-nav">
+				<nav class="mobile-nav" style="display: none;">
 					<div class="mobile-links">
-						<a href="#portfolio">Portfolio</a>
-						<a href="#about">About</a>
-						<a href="#skills">Skills</a>
-						<a href="#contact">Contact</a>
+						<a class="cross"></a>
+						<ul class="mobile-list">
+							<li><a class="m-link" href="#portfolio">Portfolio</a></li>
+							<li><a class="m-link" href="#about">About</a></li>
+							<li><a class="m-link" href="#skills">Skills</a></li>
+							<li><a class="m-link" href="#contact">Contact</a></li>
+						</ul>
 					</div>
 				</nav>
 				<div class="intro-text">
@@ -43,27 +46,37 @@
 				</div>
 				<a class="line" href="#portfolio"></a>
 			</div>
-			<div class="sidebar sidebar-active">
+			<div class="sidebar">
 				<a href="#contact">CONTACT</a><a href="#skills">SKILLS</a><a href="#about">ABOUT</a><a href="#portfolio">PORTFOLIO</a>
 			</div>
 			<div id="portfolio">
 				<div class="card">
-					<a href="javascript:;">
-						<img src="images/portfolio/montoya-main.jpg" alt="Montoya Electric Mockup">
+					<a href="/elbuen.html">
+						<img src="images/portfolio/elbuen-main.jpg" alt="El Buen Samaritano">
 						<div class="portfolio-caption">
-							<h1>Montoya Electric</h1>
-							<h3>Web Development</h3>
-							<p>Click here to see case study</p>
+							<h1>El Buen</h1>
+							<h3>Web Dev / Graphic Design</h3>
+							<p>Click to see case study</p>
 						</div>
 					</a>
 				</div>
 				<div class="card">
-					<a href="javascript:;">
+					<a href="/electric.html">
+						<img src="images/portfolio/montoya-main.jpg" alt="Montoya Electric Mockup">
+						<div class="portfolio-caption">
+							<h1>Montoya Electric</h1>
+							<h3>Web Dev / Branding</h3>
+							<p>Click to see case study</p>
+						</div>
+					</a>
+				</div>
+				<div class="card">
+					<a href="/cycle.html">
 						<img src="images/portfolio/cycle-main.jpg" alt="Cycle De Mayo">
 						<div class="portfolio-caption">
 							<h1>Cycle De Mayo</h1>
 							<h3>Social Media Marketing</h3>
-							<p>Click here to see case study</p>
+							<p>Click to see case study</p>
 						</div>
 					</a>
 				</div>
@@ -73,37 +86,27 @@
 						<div class="portfolio-caption">
 							<h1>Snapchat</h1>
 							<h3>Social Media Marketing</h3>
-							<p>Click here to see case study</p>
+							<p>Click to see case study</p>
 						</div>
 					</a>
 				</div>
 				<div class="card">
-					<a href="javascript:;">
+					<a href="/madisondrinks.html">
 						<img src="images/portfolio/appmock.png" alt="MadisonDrinks">
 						<div class="portfolio-caption">
 							<h1>MadisonDrinks</h1>
 							<h3>UI Design / Android Dev</h3>
-							<p>Click here to see case study</p>
+							<p>Click to see case study</p>
 						</div>
 					</a>
 				</div>
 				<div class="card">
-					<a href="javascript:;">
+					<a href="/lambdas.html">
 						<img src="images/portfolio/lambda-main.jpg" alt="Wisconsin Lambdas">
 						<div class="portfolio-caption">
 							<h1>Wisconsin Lambdas</h1>
 							<h3>Web Development</h3>
-							<p>Click here to see case study</p>
-						</div>
-					</a>
-				</div>
-				<div class="card">
-					<a href="javascript:;">
-						<img src="images/portfolio/supermercado-main.jpg" alt="Supermercado Latino">
-						<div class="portfolio-caption">
-							<h1>Supermercado</h1>
-							<h3>Social Media Marketing</h3>
-							<p>Click here to see case study</p>
+							<p>Click to see case study</p>
 						</div>
 					</a>
 				</div>
@@ -148,7 +151,7 @@
 						<ul>
 							<li>Facebook Cover Photos</li>
 							<li>Snapchat Geofilters</li>
-							<li>Google Analytics</li>
+							<li>Marketing Strategy</li>
 							<li>Hablando Español</li>
 						</ul>
 					</div>
@@ -157,19 +160,17 @@
 			<div id="contact">
 				<h1>Let's team up<span>.</span></h1>
 				<p>Name a more iconic duo than us. I'll wait.</p>
-				<form action="index_submit" method="post" accept-charset="utf-8">
-					<input class="input-line" type="text" placeholder="First Name">
-					<input class="input-line" type="text" placeholder="Last Name">
-					<input class="input-line" type="email" placeholder="Email">
+				<form id="ajax-form" action="mailer.php" method="post" accept-charset="utf-8">
+					<input class="input-line" type="text" name="firstname" placeholder="First Name" required>
+					<input class="input-line" type="text" name="lastname" placeholder="Last Name" required>
+					<input class="input-line" type="email" name="email" placeholder="Email" required>
 					<input class="submit-btn" type="submit" value="SEND A HOLLER">
 				</form>
 				<div class="fin">
 					<a href="https://www.behance.net/joshua-isaiah" target="_blank">BEHANCE</a><a href="https://www.facebook.com/joshrodriguez17" target="_blank"><img src="images/fb-logo-blk.svg" alt="Joshua Isaiah's Facebook"></a><a href="https://www.linkedin.com/in/joshuaisaiah" target="_blank"><img src="images/li-logo-blk.svg" alt="Joshua Isaiah's LinkedIn"></a><a href="https://www.github.com/joshrod" target="_blank">GITHUB</a>
 				</div>
 			</div>
-			<!-- UNCOMMENT WHEN DONE WITH ALL WEBPAGES
 			<script src="js/smoothscroll.js"></script>
 			<script src="js/script.js"></script>
-			-->
 		</body>
 	</html>
