--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 			<!--[if IE]><link rel="shortcut icon" href="images/favicons/favicon-32.ico"><![endif]-->
 			<link rel="icon" href="images/favicons/favicon.png" type="image/x-icon" />
 			<link rel="canonical" href="http://joshuaisaiah.com"/>
+			<!-- build:css css/main.min.css -->
 			<link type="text/css" rel="stylesheet" href="css/main.css" />
+			<!-- endbuild -->
 			<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,800" rel="stylesheet">
 		</head>
 		<body>
@@ -171,6 +173,8 @@
 				</div>
 			</div>
 			<script src="js/smoothscroll.js"></script>
+			<!-- build:js js/script.min.js -->
 			<script src="js/script.js"></script>
+			<!-- endbuild -->
 		</body>
 	</html>
