--- a/lambdas.html
+++ b/lambdas.html
@@ -10,7 +10,9 @@
 			<!--[if IE]><link rel="shortcut icon" href="images/favicons/favicon-32.ico"><![endif]-->
 			<link rel="icon" href="images/favicons/favicon.png" type="image/x-icon" />
 			<link rel="canonical" href="http://joshuaisaiah.com"/>
+			<!-- build:css css/main.min.css -->
 			<link type="text/css" rel="stylesheet" href="css/main.css" />
+			<!-- endbuild -->
 			<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,800" rel="stylesheet">
 		</head>
 		<body>
@@ -60,6 +62,8 @@
 					</div>
 				</div>				
 			</div>
+			<!-- build:js js/cases.min.js -->
 			<script src="js/cases.js"></script>
+			<!-- endbuild -->
 		</body>
 	</html>
