--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 	<html>
 		<head>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-98321465-1"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'UA-98321465-1');
+			</script>
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 			<title>Joshua Isaiah Rodriguez | Front-End Web Developer</title>
@@ -162,16 +170,19 @@
 			<div id="contact">
 				<h1>Let's team up<span>.</span></h1>
 				<p>Name a more iconic duo than us. I'll wait.</p>
+				<p>Email me at <a href="mailto:josh@joshuaisaiah.com">josh@joshuaisaiah.com</a> or notify me here:</p>
 				<form id="ajax-form" action="mailer.php" method="post" accept-charset="utf-8">
 					<input class="input-line" type="text" name="firstname" placeholder="First Name" required>
 					<input class="input-line" type="text" name="lastname" placeholder="Last Name" required>
 					<input class="input-line" type="email" name="email" placeholder="Email" required>
-					<input class="submit-btn" type="submit" value="SEND A HOLLER">
+					<button id="recaptcha" class="submit-btn g-recaptcha" data-sitekey="6Le-10AUAAAAAKjzFUrngykaKSCYwjP-sZrcihEs"
+					data-callback="submitForm">SEND A HOLLER</button>
 				</form>
 				<div class="fin">
 					<a href="https://www.behance.net/joshua-isaiah" target="_blank">BEHANCE</a><a href="https://www.facebook.com/joshrodriguez17" target="_blank"><img src="images/fb-logo-blk.svg" alt="Joshua Isaiah's Facebook"></a><a href="https://www.linkedin.com/in/joshuaisaiah" target="_blank"><img src="images/li-logo-blk.svg" alt="Joshua Isaiah's LinkedIn"></a><a href="https://www.github.com/joshrod" target="_blank">GITHUB</a>
 				</div>
 			</div>
+			<script src='https://www.google.com/recaptcha/api.js'></script>
 			<script src="js/smoothscroll.js"></script>
 			<!-- build:js js/script.min.js -->
 			<script src="js/script.js"></script>
