Removed reCAPTCHA, AJAX contact form functional again, and margin fixes for main page sections.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-98321465-1"></script>
-			<script>
-			  window.dataLayer = window.dataLayer || [];
-			  function gtag(){dataLayer.push(arguments);}
-			  gtag('js', new Date());
-
-			  gtag('config', 'UA-98321465-1');
-			</script>
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 			<title>Joshua Isaiah Rodriguez | Front-End Web Developer</title>
@@ -175,14 +167,12 @@
 					<input class="input-line" type="text" name="firstname" placeholder="First Name" required>
 					<input class="input-line" type="text" name="lastname" placeholder="Last Name" required>
 					<input class="input-line" type="email" name="email" placeholder="Email" required>
-					<button id="recaptcha" class="submit-btn g-recaptcha" data-sitekey="6Le-10AUAAAAAKjzFUrngykaKSCYwjP-sZrcihEs"
-					data-callback="submitForm">SEND A HOLLER</button>
+					<input class="submit-btn" type="submit" value="SEND A HOLLER">
 				</form>
 				<div class="fin">
 					<a href="https://www.behance.net/joshua-isaiah" target="_blank">BEHANCE</a><a href="https://www.facebook.com/joshrodriguez17" target="_blank"><img src="images/fb-logo-blk.svg" alt="Joshua Isaiah's Facebook"></a><a href="https://www.linkedin.com/in/joshuaisaiah" target="_blank"><img src="images/li-logo-blk.svg" alt="Joshua Isaiah's LinkedIn"></a><a href="https://www.github.com/joshrod" target="_blank">GITHUB</a>
 				</div>
 			</div>
-			<script src='https://www.google.com/recaptcha/api.js'></script>
 			<script src="js/smoothscroll.js"></script>
 			<!-- build:js js/script.min.js -->
 			<script src="js/script.js"></script>
