New keyframe animations for intro section, overlay now shows from bottom on card click, Padding fix on case study pages so images are larger on desktop.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 	<html>
 		<head>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-98321465-1"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'UA-98321465-1');
+			</script>
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 			<title>Joshua Isaiah Rodriguez | Front-End Web Developer</title>
@@ -35,12 +43,12 @@
 					</div>
 				</nav>
 				<div class="intro-text">
-					<h3>Hello there. I'm <span>Joshua Isaiah.</span></h3>
-					<h1>Front-End Web Development<br>
+					<h3 class="shrink-text">Hello there. I'm <span>Joshua Isaiah.</span></h3>
+					<h1 class="fade-intro">Front-End Web Development<br>
 						Social Media Marketing &<br>
 						Graphic Design
 					</h1>
-					<h3>These are the things I do.</h3>
+					<h3 class="delay-typing">These are the things I do.</h3>
 				</div>
 				<div class="intro-link">
 					<a href="#portfolio">My <span>Portfolio</span><br>is down here</a>
@@ -173,6 +181,7 @@
 					<a href="https://www.behance.net/joshua-isaiah" target="_blank">BEHANCE</a><a href="https://www.facebook.com/joshrodriguez17" target="_blank"><img src="images/fb-logo-blk.svg" alt="Joshua Isaiah's Facebook"></a><a href="https://www.linkedin.com/in/joshuaisaiah" target="_blank"><img src="images/li-logo-blk.svg" alt="Joshua Isaiah's LinkedIn"></a><a href="https://www.github.com/joshrod" target="_blank">GITHUB</a>
 				</div>
 			</div>
+			<div class="index-overlay"></div>
 			<script src="js/smoothscroll.js"></script>
 			<!-- build:js js/script.min.js -->
 			<script src="js/script.js"></script>
