Shorten the intro page animation, add a honeypot to the form to prevent spambots.

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 					<input class="input-line" type="text" name="firstname" placeholder="First Name" required>
 					<input class="input-line" type="text" name="lastname" placeholder="Last Name" required>
 					<input class="input-line" type="email" name="email" placeholder="Email" required>
+					<input id="phone" type="checkbox" name="phone" value="1" tabindex="-1" autocomplete="off">
 					<input class="submit-btn" type="submit" value="SEND A HOLLER">
 				</form>
 				<div class="fin">
