Change first section to be more mobile-friendly, add FX to front page using JS and CSS classes, add the Ordinary Freaks card and respective page, add a FB Banner to El Buen page.

--- a/electric.html
+++ b/electric.html
@@ -31,10 +31,10 @@
 				</div>
 			</div>
 			<div class="cs-sidebar">
-				<a href="/index.html#portfolio">BACK TO MAIN</a>
+				<a href="/#portfolio">BACK TO MAIN</a>
 			</div>
 			<div class="cs-container">
-				<div class="cs-back"><a href="/index.html#portfolio">< BACK</a></div>
+				<div class="cs-back"><a href="/#portfolio">< BACK</a></div>
 				<h1 class="mobile-title">Montoya Electric</h1>
 				<div class="cs-fw">
 					<h3 class="cs-heading">Overview</h3>
