--- a/index.html
+++ b/index.html
@@ -43,15 +43,10 @@
 					</div>
 				</nav>
 				<div class="intro-text">
-					<h3 class="shrink-text">Hello there. I'm <span>Joshua Isaiah.</span></h3>
-					<h1 class="fade-intro">Front-End Web Development<br>
-						Social Media Marketing &<br>
-						Graphic Design
-					</h1>
-					<h3 class="delay-typing">These are the things I do.</h3>
+					<h1 class="fade-intro">Hello there.<br>I'm <span>Joshua Isaiah</span>.<br>Front-End <span id="line-break"><br></span>Web Developer. <br>Digital Designer.</h1>
 				</div>
 				<div class="intro-link">
-					<a href="#portfolio">My <span>Portfolio</span><br>is down here</a>
+					<a href="#portfolio"><span>Portfolio</span><br></a>
 					<span class="arrow" href="#portfolio"></span>
 				</div>
 				<a class="line" href="#portfolio"></a>
@@ -75,7 +70,7 @@
 						<img src="images/portfolio/montoya-main.jpg" alt="Montoya Electric Mockup">
 						<div class="portfolio-caption">
 							<h1>Montoya Electric</h1>
-							<h3>Web Dev / Branding</h3>
+							<h3>Web Dev / Identity Design</h3>
 							<p>Click to see case study</p>
 						</div>
 					</a>
@@ -96,6 +91,16 @@
 						<div class="portfolio-caption">
 							<h1>Snapchat</h1>
 							<h3>Social Media Marketing</h3>
+							<p>Click to see case study</p>
+						</div>
+					</a>
+				</div>
+				<div class="card">
+					<a href="/ordinary.html">
+						<img src="images/portfolio/ordinary-main.jpg" alt="Ordinary Freaks">
+						<div class="portfolio-caption">
+							<h1>Ordinary Freaks</h1>
+							<h3>Web Development</h3>
 							<p>Click to see case study</p>
 						</div>
 					</a>
@@ -124,15 +129,15 @@
 			<div id="about">
 				<div class="about-text">
 					<h1>Let's be real<span>.</span></h1>
-					<p>I know this is supposed to be about me, but really, it's about you and how I can help by way of front-end web development, social media marketing, and graphic design.<br><br>
+					<p>I know this is supposed to be about me, but really, it's about you and how I can help by way of front-end web development and digital design.<br><br>
 					Simply put, I am a problem-solver. Upon this foundation, I build products and strategies that reach your goals and make differences.<br><br>
-					On a less formal note, my interests outside of work are mixing music, grinding in Destiny 2, and trying to be a regular at the gym.
+					On a less formal note, my interests outside of work are mixing music, being a Roadhog main on Overwatch, and trying to be a regular at the gym.
 					</p>
 				</div>
 				<img src="images/jr-bw.jpg" alt="Joshua Isaiah">
 			</div>
 			<div id="skills">
-				<h1>Skills</h1>
+				<h1>Skills<span>.</span></h1>
 				<div class="skills-container">
 					<div class="skills-list">
 						<h3>Programming</h3>
