--- a/lambdas.html
+++ b/lambdas.html
@@ -31,10 +31,10 @@
 				</div>
 			</div>
 			<div class="cs-sidebar">
-				<a href="/index.html#portfolio">BACK TO MAIN</a>
+				<a href="/#portfolio">BACK TO MAIN</a>
 			</div>
 			<div class="cs-container">
-				<div class="cs-back"><a href="/index.html#portfolio">< BACK</a></div>
+				<div class="cs-back"><a href="/#portfolio">< BACK</a></div>
 				<h1 class="mobile-title">Wisconsin Lambdas</h1>
 				<div class="cs-fw">
 					<h3 class="cs-heading">Overview</h3>
@@ -44,7 +44,7 @@
 				<img src="images/lambdas/lambda-lineage@0,3x.png" alt="Wisconsin Lambdas Home Page" class="cs-image" srcset="images/lambdas/lambda-lineage@0,5x.png 2x">
 				<div class="cs-fw">
 					<h3 class="cs-heading">The Website</h3>
-					<p>I started them off with a simple WordPress site using an existing theme that featured posts. This way, members can update posts and tag them so that their accomplishments can be front and center on the home page.<br><br>The Lambdas also have a strong Instagram presence so I thought it would be a good idea to add an Instagram feed to keep content fresh on the front page in the case of long periods of inactivity. The rest of the pages were done by the members of the organization with my guidance.<br><br>> <a href="http://www.wisconsinlambdas.org" target="_blank">Visit the website</a></p>
+					<p>I started them off with a simple WordPress site using an existing theme that featured posts. This way, members can update posts and tag them so that their accomplishments can be front and center on the home page.<br><br>The Lambdas also have a strong Instagram presence so I thought it would be a good idea to add an Instagram feed to keep content fresh on the front page in the case of long periods of inactivity. The rest of the pages were done by the members of the organization with my guidance.</p>
 				</div>
 				<div class="more-projects">
 					<h3 class="cs-heading">More Projects</h3>
