--- a/madisondrinks.html
+++ b/madisondrinks.html
@@ -31,10 +31,10 @@
 				</div>
 			</div>
 			<div class="cs-sidebar">
-				<a href="/index.html#portfolio">BACK TO MAIN</a>
+				<a href="/#portfolio">BACK TO MAIN</a>
 			</div>
 			<div class="cs-container">
-				<div class="cs-back"><a href="/index.html#portfolio">< BACK</a></div>
+				<div class="cs-back"><a href="/#portfolio">< BACK</a></div>
 				<h1 class="mobile-title">MadisonDrinks</h1>
 				<div class="cs-fw">
 					<h3 class="cs-heading">Overview</h3>
@@ -53,11 +53,11 @@
 				<div class="more-projects">
 					<h3 class="cs-heading">More Projects</h3>
 					<div class="card">
-						<a href="/snapchat.html">
-							<img src="images/portfolio/yellowfilters.jpg" alt="Snapchat Filters">
+						<a href="/ordinary.html">
+							<img src="images/portfolio/ordinary-main.jpg" alt="Ordinary Freaks">
 							<div class="portfolio-caption">
-								<h1>Snapchat</h1>
-								<h3>Social Media Marketing</h3>
+								<h1>Ordinary Freaks</h1>
+								<h3>Web Development</h3>
 								<p>Click to see case study</p>
 							</div>
 						</a>
