--- a/snapchat.html
+++ b/snapchat.html
@@ -32,10 +32,10 @@
 				</div>
 			</div>
 			<div class="cs-sidebar">
-				<a href="/index.html#portfolio">BACK TO MAIN</a>
+				<a href="/#portfolio">BACK TO MAIN</a>
 			</div>
 			<div class="cs-container">
-				<div class="cs-back"><a href="/index.html#portfolio">< BACK</a></div>
+				<div class="cs-back"><a href="/#portfolio">< BACK</a></div>
 				<h1 class="mobile-title">Snapchat</h1>
 				<div class="cs-fw">
 					<h3 class="cs-heading">Overview</h3>
@@ -44,15 +44,15 @@
 				<div class="snap-filter">
 					<img src="images/snapchat/sa-filter.png" alt="Latin Night Geofilter" srcset="images/snapchat/sa-filter@2x.png">
 					<div class="snap-desc">
-						<p>At the time I created my San Antonio filter, I didn't see a lot of other geofilters that included the two most recognizable landmarks of the city, in my opinion: the Alamo and the Hemisfair Tower. If they were included, they were only silhouettes in a skyline, and I wanted to represent them in all their glory together. The following stats are from December 2017:</p>
+						<p>At the time I created my San Antonio filter, I didn't see a lot of other geofilters that included the two most recognizable landmarks of the city, in my opinion: the Alamo and the Hemisfair Tower. If they were included, they were only silhouettes in a skyline, and I wanted to represent them in all their glory together. The following stats are from April 2018:</p>
 						<div class="snap-stats">
 							<ul class="stat-titles">
 								<li>Uses</li>
 								<li>Views</li>
 							</ul>
 							<ul>
-								<li>445.4K</li>
-								<li>19.3M</li>
+								<li>551.6K</li>
+								<li>24M</li>
 							</ul>
 						</div>
 					</div>
@@ -95,11 +95,11 @@
 						</a>
 					</div>
 					<div class="card">
-						<a href="/madisondrinks.html">
-							<img src="images/portfolio/appmock.png" alt="MadisonDrinks">
+						<a href="/ordinary.html">
+							<img src="images/portfolio/ordinary-main.jpg" alt="Ordinary Freaks">
 							<div class="portfolio-caption">
-								<h1>MadisonDrinks</h1>
-								<h3>UI Design / Android Dev</h3>
+								<h1>Ordinary Freaks</h1>
+								<h3>Web Development</h3>
 								<p>Click to see case study</p>
 							</div>
 						</a>
